--- a/app/locale/en_US/template/email/rewardsref/referral_subscribe.html
+++ b/app/locale/en_US/template/email/rewardsref/referral_subscribe.html
@@ -1,4 +1,4 @@
-<!--@subject {{var parent.name}} invites you to Rooja @-->
+<!--@subject {{var parent.name}} thinks you'd love Rooja @-->
 
 <!--@style 
 body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif; }
