--- a/app/design/frontend/default/rooja/template/customer/dashboard.phtml
+++ b/app/design/frontend/default/rooja/template/customer/dashboard.phtml
@@ -34,8 +34,9 @@
             <h2><?php echo $this->__('Account Information') ?></h2>
      
         <?php echo $this->getChildHtml('info') ?>
+
         <?php echo $this->getChildHtml('address') ?>
-	
+		To remove your account, please email <a href="mailto:info@rooja.com">info@rooja.com</a>
 
 		<?php /*WDCA CODE BEGINS*/?>
 		<?php if(!Mage::getStoreConfigFlag('advanced/modules_disable_output/TBT_Rewards') 
