--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -58,7 +58,7 @@
 	<p>Having trouble? Email us at <a href="mailto:support@rooja.in">support@rooja.in</a></p>
 	</div>
 	<div style="display:none" id="getInvitedCont">
-	<h2 id="earlyAccess" class="tr">Early Access</h2>
+	<h2 id="earlyAccess" class="tr">Become a Member</h2>
 	<p>Get invited to the pre-launch sale in Summer 2011. Free shipping within India.</p>
 	<link href="http://my.betali.st/widget/y2jd9dtr.css" rel="stylesheet" /><script src="http://my.betali.st/widget/y2jd9dtr.js" id="MyBetaList"></script>
 	
