--- a/app/design/frontend/default/rooja/template/page/html/header.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/header.phtml
@@ -126,7 +126,7 @@ if($session->isLoggedIn()) {$customer = $session->getCustomer();}
 	<aside id="accountLinks">
 		<ul id="myAccount">
 			<li class="ignore-item dots"><a href="/rewardsref/customer/index/">Invite Friends and Earn Free Shipping</a></li>
-			<li><a href="#" title="">Welcome <?php echo $customer->getFirstname(); ?></a>
+			<li class="welcome-top"><a href="#" title="">Welcome <?php echo $customer->getFirstname(); ?></a>
 				<ul>
 					<li><a href="/customer/account" title="">My Account</a></li>
 					<li><a href="/customer/account/logout" title="">Sign Out</a></li>
