--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -168,6 +168,17 @@ ul#myAccount li{
 	background: url("../images/icons/arrow-nav-white.png") no-repeat right 8px;
 }
 
+ul#myAccount li.welcome-top {
+	padding: 36px 20px 27px 0px;
+	background: url("../images/icons/arrow-nav-white.png") no-repeat right 33px;
+	margin: -26px 0 0 0;
+}
+
+ul#myAccount li.welcome-top:hover {
+	background: #220F26 url("../images/icons/arrow-nav-white.png") no-repeat right 33px;
+	margin: -26px 0 0 0;
+}
+
 	ul#myAccount li.ignore-item {
 		background: url("../images/invite-friends.png") no-repeat 9px center;
 		height: 45px;
