--- a/app/design/frontend/default/rooja/template/catalog/category/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/category/view.phtml
@@ -82,7 +82,7 @@ $expired = 1;
 				var addthis_config = {"data_track_clickback":true};
 				var addthis_share = { 
 				    templates: {
-				                twitter: '<?php echo $_helper->categoryAttribute($_category, $_category->getName(), 'name') ?> sale on Rooja. Upto 60% off retail. {{url}} via @RoojaFashion'
+				                twitter: 'Shop the <?php echo $_helper->categoryAttribute($_category, $_category->getName(), 'name') ?> sale on Rooja. {{url}} via @RoojaFashion'
 				               }
 				}
 				</script>
