hover states for global menu

--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -169,15 +169,16 @@ ul#myAccount li{
 }
 
 ul#myAccount li.welcome-top {
-	padding: 36px 20px 27px 0px;
-	background: url("../images/icons/arrow-nav-white.png") no-repeat right 33px;
+	padding: 36px 25px 27px 20px;
+	background: url("../images/icons/arrow-nav-white.png") no-repeat 99px 33px;
 	margin: -26px 0 0 0;
 }
 
 ul#myAccount li.welcome-top:hover {
-	background: #220F26 url("../images/icons/arrow-nav-white.png") no-repeat right 33px;
+	padding: 36px 25px 27px 20px;
+	background:#220F26 url("../images/icons/arrow-nav-white.png") no-repeat 99px 33px;
 	margin: -26px 0 0 0;
-}
+	}
 
 	ul#myAccount li.ignore-item {
 		background: url("../images/invite-friends.png") no-repeat 9px center;
