--- a/skin/frontend/default/rooja/css/login.css
+++ b/skin/frontend/default/rooja/css/login.css
@@ -155,6 +155,7 @@ form input#loginBtn{
     bottom:0px;
     width:100%;
     text-align:center;
+    z-index:9999;
 }
 
 .navCont{margin: 0px auto;width:850px;text-align:center;}
