--- a/app/design/frontend/default/rooja/template/page/html/header.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/header.phtml
@@ -132,10 +132,9 @@ if($session->isLoggedIn()) {$customer = $session->getCustomer();}
 					<li><a href="/customer/account/logout" title="">Sign Out</a></li>
 				</ul>
 			</li>
-			<li>
+			<li class="dotted">
 				<?php $cart_count = Mage::getSingleton('checkout/cart')->getSummaryQty(); ?>
-				<a href="/checkout/cart" id="myBag">My Bag (<?php if($cart_count == 0) echo '0'; else echo $cart_count; ?>)</a>
-				
+				<a href="/checkout/cart" id="myBag">My Bag (<?php if($cart_count == 0) echo '0'; else echo $cart_count; ?>)</a>	
 			</li>
 		</ul>
 	</aside>
