--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -181,7 +181,7 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
 					</figure>
 				</section>
 				<section id="productOptions">
-						<p class="startingPrice">Starting Price: <strike>R <?php echo number_format($_product->getPrice(), 2) ?></strike></p>
+						<p class="startingPrice">Original Price: <strike>Rs. <?php echo number_format($_product->getPrice(), 2) ?></strike></p>
 					<p class="currentPrice">Current Price:<span>
 					<?php if (!$fbprice == null) { ?>
 					<?php echo 'Rs. ' . number_format($fbprice,2); } else { ?>
