new account email image fix

--- a/app/locale/en_US/template/email/account_new.html
+++ b/app/locale/en_US/template/email/account_new.html
@@ -35,7 +35,7 @@
 	<li style="list-style: square;">Change your password</li>
 	<li style="list-style: square;">Store alternative addresses (for shipping to multiple family members and friends!)</li>
 	
-	<a href="http://www.rooja.com"><img src="images/email/start.jpg" alt="start shopping!" /><a>
+	<a href="http://www.rooja.com"><img src="{{skin url="images/email/start.jpg" _area='frontend'}}" alt="start shopping!" /><a>
 		
 	</ul></td></tr>
 	<tr style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
