--- a/app/design/frontend/default/rooja/template/checkout/success.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/success.phtml
@@ -36,7 +36,7 @@
 <?php  else :?>
     <p><?php echo $this->__('Your order # is: %s.', $this->escapeHtml($this->getOrderId())) ?></p>
 <?php endif;?>
-	<p>Thanks for your purchase! We&#x27;ve received your order and will email you with a confirmation when it ships.</p>
+	<p>We have received your order and will email you with a confirmation when it ships.</p>
 
 	<p>If you have any questions or there is an error in your order, please <a class="contact" href="/contacts">Contact Us</a></p>
 <?php if ($this->getCanViewOrder() && $this->getCanPrintOrder()) :?>
@@ -51,7 +51,7 @@
 
 <section id="sharePurchase" class="right share-purchase">
 	<h3>Share Your Purchase!</h3>
-	<p>Let your friends know you scored some sweet loot on Rooja!  Encourage them to sign up and earn a $10 credit with every friend.</p>
+	<p>Let your friends know you scored some sweet loot on Rooja!  Encourage them to sign up and earn a Rs. 10 credit with every friend.</p>
 	<!-- AddThis Button BEGIN -->
 	<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 	<a class="addthis_button_facebook"></a>
