confirmation page text changes

--- a/app/design/frontend/default/rooja/template/checkout/success.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/success.phtml
@@ -51,7 +51,7 @@
 
 <section id="sharePurchase" class="right share-purchase">
 	<h3>Share Your Purchase!</h3>
-	<p>Let your friends know you scored some sweet loot on Rooja!  Encourage them to sign up and earn a Rs. 10 credit with every friend.</p>
+	<p>Let your friends know you scored some sweet loot on Rooja! Invite 10 friends to Rooja and get free shipping for 2 months.</p>
 	<!-- AddThis Button BEGIN -->
 	<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 	<a class="addthis_button_facebook"></a>
