points history formatting

--- a/app/design/frontend/default/rooja/template/rewards/customer/transfers.phtml
+++ b/app/design/frontend/default/rooja/template/rewards/customer/transfers.phtml
@@ -51,7 +51,7 @@
   <div class="content">
     <!--Checks too see if the customer has any tramsfers  -->
     <?php if(sizeof($transferArray)): ?>
-    <table cellspacing="3" cellpadding="5" class="data-table" id="<?php echo $table_id; ?>">
+    <table cellspacing="3" cellpadding="5" class="data-table-points" id="<?php echo $table_id; ?>">
       <col width="125" />
       <col />
       <col />
