--- a/app/locale/en_US/template/email/password_new.html
+++ b/app/locale/en_US/template/email/password_new.html
@@ -1,41 +1,41 @@
-<!--@subject New password for {{var customer.name}} @-->
+<!--@subject Your New Rooja Password @-->
 <!--@vars
 {"store url=\"\"":"Store Url",
 "skin url=\"images/logo_email.gif\" _area='frontend'":"Email Logo Image",
-"store url=\"customer/account/\"":"Customer Account Url",
-"htmlescape var=$customer.name":"Customer Name",
-"htmlescape var=$customer.password":"Customer New Password"}
+"htmlescape var=$user.name":"Admin Name",
+"htmlescape var=$password":"Admin Password",
+"store url=\"adminhtml/system_account/\"":"Admin Account Url"}
 @-->
+
 <!--@styles
 body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif; }
 @-->
 
-<body style="background:#F6F6F6; font-family:Verdana, Arial, Helvetica, sans-serif; font-size:12px; margin:0; padding:0;">
-<div style="background:#F6F6F6; font-family:Verdana, Arial, Helvetica, sans-serif; font-size:12px; margin:0; padding:0;">
-<table cellspacing="0" cellpadding="0" border="0" height="100%" width="100%">
-    <tr>
-        <td align="center" valign="top" style="padding:20px 0 20px 0">
-            <!-- [ header starts here] -->
-            <table bgcolor="FFFFFF" cellspacing="0" cellpadding="10" border="0" width="650" style="border:1px solid #E0E0E0;">
-                <tr>
-                    <td valign="top">
-                        <a href="{{store url=""}}" style="color:#1E7EC8;"><img src="{{skin url="images/logo_email.gif" _area='frontend'}}" alt="{{var store.getFrontendName()}}" border="0"/></a>
-                    </td>
-                </tr>
-                <!-- [ middle starts here] -->
-                <tr>
-                    <td valign="top">
-                        <h1 style="font-size:22px; font-weight:normal; line-height:22px; margin:0 0 11px 0;"">Dear {{htmlescape var=$customer.name}},</h1>
-                        <p style="font-size:12px; line-height:16px; margin:0 0 8px 0;"><strong>Your new password is:</strong> {{htmlescape var=$customer.password}}</p>
-                        <p style="font-size:12px; line-height:16px; margin:0;">You can change your password at any time by logging into <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">your account</a>.<p>
-                    </td>
-                </tr>
-                <tr>
-                    <td bgcolor="#EAEAEA" align="center" style="background:#EAEAEA; text-align:center;"><center><p style="font-size:12px; margin:0;">Thank you again, <strong>{{var store.getFrontendName()}}</strong></p></center></td>
-                </tr>
-            </table>
-        </td>
-    </tr>
+
+
+<html>
+<head>
+<meta httpequiv="ContentType" content="text/html; charset=iso88591">
+</head>
+<table id="Table_01" width="650" height="638" border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;margin: 0 auto;">
+	<tr style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
+		<td colspan="2" style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
+			 <a href="{{store url=""}}"><img src="{{skin url="images/email/new-account_02.jpg" _area='frontend'}}" width="650" height="180" alt="" style="display: block;padding: 10px 10px 10px 0;"></a></td>
+	</tr>
+	<tr style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
+		<td style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
+			<h1 style="font-size:22px; font-weight:normal; line-height:22px; margin:0 0 11px 0;"">Dear {{htmlescape var=$user.name}},</h1>
+            <p style="font-size:12px; line-height:16px; margin:0 0 8px 0;"><strong>Your new password is:</strong> {{htmlescape var=$password}}</p>
+            <p style="font-size:12px; line-height:16px; margin:0;">You can change your password at any time by logging into <a href="{{store url="adminhtml/system_account/"}}" style="color:#1E7EC8;">your account</a>.<p>
+			
+			</td>
+			</tr>
+	<tr style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
+		<td colspan="2" id="footer" style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 11px;color: #111;line-height: 18px;">
+			<img src="{{skin url="images/email/break.jpg" _area='frontend'}}" alt="" style="display: block;padding: 10px 10px 10px 0;">
+			If you have any questions about your account or any other matter, please feel free to contact us at support@rooja.com or by phone at (888) 298-9238.
+		</td>
+	</tr>
 </table>
-</div>
-</body>
+
+</html>
