--- a/app/locale/en_US/template/email/password_new.html
+++ b/app/locale/en_US/template/email/password_new.html
@@ -2,15 +2,13 @@
 <!--@vars
 {"store url=\"\"":"Store Url",
 "skin url=\"images/logo_email.gif\" _area='frontend'":"Email Logo Image",
-"htmlescape var=$user.name":"Admin Name",
-"htmlescape var=$password":"Admin Password",
-"store url=\"adminhtml/system_account/\"":"Admin Account Url"}
+"store url=\"customer/account/\"":"Customer Account Url",
+"htmlescape var=$customer.name":"Customer Name",
+"htmlescape var=$customer.password":"Customer New Password"}
 @-->
-
 <!--@styles
 body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif; }
 @-->
-
 
 
 <html>
@@ -24,10 +22,10 @@ body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif;
 	</tr>
 	<tr style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
 		<td style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
-			<h1 style="font-size:22px; font-weight:normal; line-height:22px; margin:0 0 11px 0;"">Dear {{htmlescape var=$user.name}},</h1>
-            <p style="font-size:12px; line-height:16px; margin:0 0 8px 0;"><strong>Your new password is:</strong> {{htmlescape var=$password}}</p>
-            <p style="font-size:12px; line-height:16px; margin:0;">You can change your password at any time by logging into <a href="{{store url="adminhtml/system_account/"}}" style="color:#1E7EC8;">your account</a>.<p>
-			
+			   <h1 style="font-size:22px; font-weight:normal; line-height:22px; margin:0 0 11px 0;"">Dear {{htmlescape var=$customer.name}},</h1>
+                <p style="font-size:12px; line-height:16px; margin:0 0 8px 0;"><strong>Your new password is:</strong> {{htmlescape var=$customer.password}}</p>
+                <p style="font-size:12px; line-height:16px; margin:0;">You can change your password at any time by logging into <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">your account</a>.<p>
+	
 			</td>
 			</tr>
 	<tr style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
@@ -39,3 +37,4 @@ body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif;
 </table>
 
 </html>
+
