--- a/app/locale/en_US/template/email/password_new.html
+++ b/app/locale/en_US/template/email/password_new.html
@@ -18,7 +18,7 @@ body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif;
 <table id="Table_01" width="650" height="438" border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;margin: 0 auto;">
 	<tr style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
 		<td colspan="2" style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
-			 <a href="{{store url=""}}"><img src="{{skin url="images/email/new-pw.jpg" _area='frontend'}}" width="650" height="180" alt="" style="display: block;padding: 10px 10px 10px 0;"></a></td>
+			 <a href="{{store url=""}}"><img src="{{skin url="images/new-pw.jpg" _area='frontend'}}" width="650" height="180" alt="" style="display: block;padding: 10px 10px 10px 0;"></a></td>
 	</tr>
 	<tr style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
 		<td style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
