request return tweak

--- a/app/design/frontend/default/rooja/template/aw_rma/customer/dashboard.phtml
+++ b/app/design/frontend/default/rooja/template/aw_rma/customer/dashboard.phtml
@@ -19,6 +19,7 @@
 <div class="awrma-account">
     <div class="page-title title-buttons">
         <h1>Returns</h1>
+		Didn't like it? Not what you wanted? Return it! 
         <a class="link-awrma-newrma" href="<?php echo $this->getUrl('awrma/customer_rma/new') ?>"><?php echo $this->__('Request a Return') ?></a>
     </div>
     <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
