request return tweak

--- a/skin/frontend/default/rooja/aw_rma/css/rma.css
+++ b/skin/frontend/default/rooja/aw_rma/css/rma.css
@@ -62,6 +62,7 @@ ul.awrma-comments-list li>div {
 	width:200px; height:39px;
 	text-indent:-999px;
 	display:block;
+	margin:55px 0 15px 0;
 }
 
 .awrma-m13x-input-wide {
