--- a/app/design/frontend/default/rooja/template/aw_rma/customer/dashboard.phtml
+++ b/app/design/frontend/default/rooja/template/aw_rma/customer/dashboard.phtml
@@ -17,7 +17,7 @@
 ?>
 
 <div class="awrma-account">
-    <div class="page-title title-buttons">
+    <div class="page-title">
         <h1>Returns</h1>
 		<p>Didn't like it? Not what you wanted? Return it! </p>
         <a class="link-awrma-newrma" href="<?php echo $this->getUrl('awrma/customer_rma/new') ?>"><?php echo $this->__('Request a Return') ?></a>
