--- a/app/design/frontend/default/rooja/template/page/html/header.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/header.phtml
@@ -132,7 +132,7 @@ if($session->isLoggedIn()) {$customer = $session->getCustomer();}
 					<li><a href="/customer/account/logout" title="">Sign Out</a></li>
 				</ul>
 			</li>
-			<li class="dotted">
+			<li class="dots ignore-item">
 				<?php $cart_count = Mage::getSingleton('checkout/cart')->getSummaryQty(); ?>
 				<a href="/checkout/cart" id="myBag">My Bag (<?php if($cart_count == 0) echo '0'; else echo $cart_count; ?>)</a>	
 			</li>
