--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -242,22 +242,20 @@ ul#myAccount li ul li a:hover{
 	cursor: pointer;
 	color:#AB8FB2;
 }
-#myBag{
+li#myBag{
 	display: block;
-	float: left;
-	width: 85px;
+	width: 110px;
 	height: 5px;
-	margin: -26px 0 -17px 10px;
-	padding: 35px 0px 33px 36px;
-	background: #431F4C url("../images/icons/bag.png") no-repeat 10px 25px !important;
+	margin: -30px 0 0 9px;
+	padding: 37px 23px 31px 0 !important;
+	background: #431F4C url("../images/icons/bag.png") no-repeat 11px 45px !important;
 	color: white;
 	font-size: 1.2em;
 }
 
 .dotted {
 	border-left: 1px dotted #fff;
-	margin-left: -40px;
-	padding: 0 0 0 18px;
+	padding: 0 0 0 40px !important;
 }
 
 #myBag:hover{
