header bag style

--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -244,28 +244,27 @@ ul#myAccount li ul li a:hover{
 }
 li#myBag{
 	display: block;
-	width: 110px;
+	width: 114px;
 	height: 5px;
-	margin: -30px 0 0 9px;
+	margin: -28px 5px 0 9px;
 	padding: 37px 23px 31px 0 !important;
-	background: #431F4C url("../images/icons/bag.png") no-repeat 11px 45px !important;
+	background: #431F4C url("../images/icons/bag.png") no-repeat 12px 30px !important;
 	color: white;
 	font-size: 1.2em;
 }
 
 .dotted {
-	border-left: 1px dotted #fff;
-	padding: 0 0 0 40px !important;
+	border-left: 1px dotted white;
+	padding: 0 13px 0 35px !important;
 }
 
-#myBag:hover{
+li#myBag:hover{
 	display: block;
-	float: left;
-	width: 85px;
+	width: 114px;
 	height: 5px;
-	margin: -26px 0 -17px 10px;
-	padding: 35px 0px 33px 36px;
-	background: #431F4C url("../images/icons/bag.png") no-repeat 10px 25px !important;
+	margin: -28px 5px 0 9px;
+	padding: 37px 23px 31px 0 !important;
+	background: #431F4C url("../images/icons/bag.png") no-repeat 12px 30px !important;
 	color: white;
 	font-size: 1.2em;
 }
