header bag style

--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -264,7 +264,7 @@ li#myBag:hover{
 	height: 5px;
 	margin: -28px 5px 0 9px;
 	padding: 37px 23px 31px 0 !important;
-	background: #431F4C url("../images/icons/bag.png") no-repeat 12px 30px !important;
+	background: #220f26 url("../images/icons/bag.png") no-repeat 12px 30px !important;
 	color: white;
 	font-size: 1.2em;
 }
