--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -247,7 +247,7 @@ li#myBag{
 	width: 114px;
 	height: 5px;
 	margin: -28px 5px 0 9px;
-	padding: 37px 23px 31px 0 !important;
+	padding: 37px 10px 31px 0 !important;
 	background: #431F4C url("../images/icons/bag.png") no-repeat 12px 30px !important;
 	color: white;
 	font-size: 1.2em;
@@ -261,12 +261,13 @@ li#myBag{
 li#myBag:hover{
 	display: block;
 	width: 114px;
-	height: 5px;
-	margin: -28px 5px 0 9px;
-	padding: 37px 23px 31px 0 !important;
-	background: #220f26 url("../images/icons/bag.png") no-repeat 12px 30px !important;
+	height: 3px;
+	margin: -28px 5px 0 0px;
+	padding: 37px 10px 31px 0 !important;
+	background: #220F26 url("../images/icons/bag.png") no-repeat 12px 30px !important;
 	color: white;
 	font-size: 1.2em;
+	border-bottom: 1px solid #431F4C;
 }
 
 #thankYouMsg a.contact {
