header bag style

--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -247,7 +247,7 @@ li#myBag{
 	width: 114px;
 	height: 5px;
 	margin: -28px 5px 0 9px;
-	padding: 37px 10px 31px  !important;
+	padding: 37px 10px 31px 0 !important;
 	background: #431F4C url("../images/icons/bag.png") no-repeat 12px 30px !important;
 	color: white;
 	font-size: 1.2em;
