--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
@@ -71,8 +71,9 @@
             <?php echo $this->getChildHtml("review")?>
 <!--                 <div id='checkoutloader' class='checkoutloader' style="width:100%;height:150px"></div> -->
 				<div id="authentication">
-					<img src="/skin/frontend/default/rooja/images/verisign.png" />
+					<img src="/skin/frontend/default/rooja/images/ccave_note.png" />
 				</div>
+					<img src="/skin/frontend/default/rooja/images/veri.jpg" />
                  <?php /*<?=$this->getChildHtml("coupon2")?>*/?>
                  </li>
             </div>
