--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -190,7 +190,7 @@ button.disabled span {}
 button.btn-checkout span {}
 button.btn-checkout.no-checkout {}
 #authentication {margin: 20px 0 0 220px;}
-
+.btn-checkout {margin:0;}
 
 p.control input.checkbox,
 p.control input.radio { margin-right:6px; }
