--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
@@ -59,7 +59,7 @@
         <p class="empty"><?php echo $this->__('You have no items in your shopping cart.') ?></p>
     <?php endif ?>
 	<p class="subtotal">
-        <strong>Cart Subtotal</strong> <?php echo Mage::helper('checkout')->formatPrice($this->getSubtotal()) ?>
+        <p class="miniCartSubtotal">Cart Subtotal</p> <span class="miniCartSubtotalPrice"><?php echo Mage::helper('checkout')->formatPrice($this->getSubtotal()) ?></span>
         <?php if ($_subtotalInclTax = $this->getSubtotalInclTax()): ?>
             <br />(<?php echo Mage::helper('checkout')->formatPrice($_subtotalInclTax) ?> <?php echo Mage::helper('tax')->getIncExcText(true) ?>)
         <?php endif; ?>
