--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -561,9 +561,21 @@ tr.summary-details-excluded { font-style:italic; }
 .block .block-content li a {}
 .block .btn-remove,
 .block .btn-edit { float:right;}
+.block .btn-edit { padding: 0 5px;}
 .block .actions { text-align:right; }
 .block .actions a { float:left; }
 .block .empty {}
+
+.miniCartSubtotal {
+	font-size:18px;
+	font-weight:bold;
+	display:inline;
+}
+
+.miniCartSubtotalPrice {
+	font-size:18px;
+	padding:0 0 0 15px;
+}
 
 .block li.odd {}
 .block li.even { background-color:#f6f6f6; }
