mini cart style changes

--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
@@ -62,9 +62,9 @@
         <p class="miniCartSubtotal">Cart Subtotal</p> <span class="miniCartSubtotalPrice"><?php echo Mage::helper('checkout')->formatPrice($this->getSubtotal()) ?></span>
         <?php if ($_subtotalInclTax = $this->getSubtotalInclTax()): ?>
             <br />(<?php echo Mage::helper('checkout')->formatPrice($_subtotalInclTax) ?> <?php echo Mage::helper('tax')->getIncExcText(true) ?>)
-        <?php endif; ?>
-    </div>
+        <?php endif; ?><br /><br />
 <a href="/checkout/cart" id="checkoutBtn">Proceed to Checkout</a>
+    </div>
 <div class="clear"></div>
     </div>
 
