--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar/default.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar/default.phtml
@@ -40,17 +40,26 @@
         <a href="<?php echo $this->getConfigureUrl() ?>" title="<?php echo $this->__('Edit item') ?>" class="btn-edit"><?php echo $this->__('Edit item')?></a>
         <?php endif ?>
         <p class="product-name"><?php if ($this->hasProductUrl()): ?><a href="<?php echo $this->getProductUrl() ?>"><?php endif; ?><?php echo $this->htmlEscape($this->getProductName()) ?><?php if ($this->hasProductUrl()): ?></a><?php endif; ?></p>
-        Quantity in Cart: <strong><?php echo $this->getQty() ?></strong><br />
-
-    <?php if ($this->helper('tax')->displayCartPriceExclTax() || $this->helper('tax')->displayCartBothPrices()): ?>
-        <?php if ($this->helper('tax')->displayCartBothPrices()): ?>
-            <?php echo $this->__('Excl. Tax'); ?>:
-        <?php endif; ?>
-        <?php if (Mage::helper('weee')->typeOfDisplay($_item, array(0, 1, 4), 'sales')): ?>
-            <?php echo $this->helper('checkout')->formatPrice($_item->getCalculationPrice()+$_item->getWeeeTaxAppliedAmount()+$_item->getWeeeTaxDisposition()); ?>
-        <?php else: ?>
-            <?php echo $this->helper('checkout')->formatPrice($_item->getCalculationPrice()) ?>
-        <?php endif; ?>
+		<table width="100%" border="0">
+			<tr>
+				<td>
+		        Quantity in Cart: <strong><?php echo $this->getQty() ?></strong>
+				</td>
+			</tr>
+			<tr>
+				<?php if ($this->helper('tax')->displayCartPriceExclTax() || $this->helper('tax')->displayCartBothPrices()): ?>
+			        <?php if ($this->helper('tax')->displayCartBothPrices()): ?>
+			            <?php echo $this->__('Excl. Tax'); ?>:
+			        <?php endif; ?>
+			        <?php if (Mage::helper('weee')->typeOfDisplay($_item, array(0, 1, 4), 'sales')): ?>
+			            <?php echo $this->helper('checkout')->formatPrice($_item->getCalculationPrice()+$_item->getWeeeTaxAppliedAmount()+$_item->getWeeeTaxDisposition()); ?>
+			        <?php else: ?>
+			            <?php echo $this->helper('checkout')->formatPrice($_item->getCalculationPrice()) ?>
+			        <?php endif; ?>				
+			</tr>
+		</table>
+		
+   
         <?php if (Mage::helper('weee')->getApplied($_item)): ?>
             <br />
             <?php if (Mage::helper('weee')->typeOfDisplay($_item, 1, 'sales')): ?>
