mini cart style changes

--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -559,8 +559,7 @@ tr.summary-details-excluded { font-style:italic; }
 .block .block-content { /*padding:10px;*/ }
 .block .block-content li.item { padding:5px 0; }
 .block .block-content li a {}
-.block .btn-remove,
-.block .btn-edit { float:right;}
+.block .btn-remove { float:right;}
 .block .btn-edit { padding: 0 5px;}
 .block .actions { text-align:right; }
 .block .actions a { float:left; }
