--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -320,7 +320,8 @@ li#myBag:hover{
 #topCart .subtotal{text-align: right;
 float: right;
 width: 300px;
-overflow: hidden;}
+overflow: hidden;
+padding: 30px 0 0 0;}
 
 #checkoutBtn{
     float:right; height:46px;line-height:46px; background:#cc6600; width:181px; font-size:1.4em; text-align:center; color:#fff;
