--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -408,13 +408,26 @@ td .product-name { width: 130px;}
 
 
 /* HOW IT WORKS OVERLAY */
-.hiw-container {background: url(../images/bgs/gray-diag.png) repeat; height:260px; width:100%; padding: 20px 0 0;}
+.hiw-container { 
+	background: url(../images/bgs/hiw-full.png) center no-repeat; 
+	background-size: cover;
+	-moz-background-size: cover;
+	-webkit-background-size: cover;
+	height:260px; width:100%; padding: 20px 0 0;
+}
+
+
 .howitworks {width:980px; color: #fff; margin: 0 auto 30px; overflow: hidden;}
 .howitworks img {float:left; display: block; padding: 4px 14px 20px 5px;}
 	.hiw1-2 {float:left; width: 66%;}
 		.one {float:left; width: 46%; padding: 15px 10px;background:#a85705;}
 		.two {float:right; width: 46%; padding: 15px 10px;background:#a85705;}
-.three {float:right; width: 31%; padding: 15px 10px; background:#a85705;}
+.three {		
+		float: right;
+		width: 31%;
+		padding: 15px 10px;
+		background: #431F4C url(../images/bgs/three.png) left center;
+		opacity: 0.8;}
 
 .howitworks p.hiw-header {border: none;}
 p.hiw-header {
