--- a/app/design/frontend/default/rooja/template/page/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/page/homepage.phtml
@@ -64,19 +64,22 @@ if(!Mage::getSingleton('customer/session')->isLoggedIn() && ($agent !="facebooke
 					<p class="hiw-header">How it works</p>
 					<div class="hiw1-2">
 						<div class="one">
+							<p>
 							<h4>Browse</h4>
-							<p>Events held on Rooja are for members only and last typically between 2 to 3 days. Each event is held only for the stated period - once ended, it is gone for good.</p>
+							Events held on Rooja are for members only and last typically between 2 to 3 days. Each event is held only for the stated period - once ended, it is gone for good.</p>
 						</div>
 
 						<div class="two">
+							<p>
 							<h4>Shop</h4>
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis.</p>
+								Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis.</p>
 						</div>
 					</div>
 
 					<div class="three">
+						<p>
 						<h4>Spread the Love</h4>
-						<p>Invite your best friends and only those you want in our community. Invite a friend and get shopping credits when your friend joins and makes their first purchase.
+							Invite your best friends and only those you want in our community. Invite a friend and get shopping credits when your friend joins and makes their first purchase.
 						</p>
 					</div>
 
